Fix subsection links not going to correct carousel slide

--- a/app/index.html
+++ b/app/index.html
@@ -344,31 +344,7 @@
     </div>
     <div id="subsection-carousel">
       <div class="owl-carousel">
-        <div id="subsection-music" class="subsection item">
-          <div class="subsection-child" class="subsection-child">
-            <img class="music-girl" src="/images/music-girl.png" />
-            <h2>Music Creative Services</h2>
-            <h1>No one ever danced to a mission statement</h1>
-            <div class="white-line"></div>
-            <div class="content">Your logo. Your colors. Your advertising. Your tagline. These are all important to your brand. But let’s be honest. No one has ever hummed to a logo or danced to a mission statement. We bring together brand and ad experts with musicians and composers to create something more memorable and entirely new: brand music.</div>
-            <ul>
-              <li>Soundtracks for TV, radio and podcasts</li>
-              <li>Custom music for digital videos, trade shows and presentations</li>
-              <li>Sound design for websites, digital, mobile and social media</li>
-              <li>Mnemoics and distinctive audio signatures</li>
-              <li>Hold music for customer support centers</li>
-            </ul>
-            <div class="quote-blue">&quot;Research shows mussectionic dramatially boosts memory&quot;</div>
-            <h2>BUSINESS INSIDER</h2>
-            <img class="icon" src="images/icon-music.png" />
-            <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
-            <h2>ERIC SHEINKOP</h2>
-            <div class="btn">GO TO OUR MUSIC SITE</div>
-            <div class="callout">CLICK ON A CASSETTE TO LISTEN</div>
-            <img class="music-cassette" src="/images/music-cassettes.png" />
-          </div>
-        </div>
-        <div id="subsection-video" class="subsection item">
+        <div id="subsection-video" class="subsection item" slide="0">
           <div class="subsection-child" class="subsection-child">
             <img class="sizzle-reel" src="/images/video-2.jpg" />
             <h2>VIDEO CREATIVE SERVICES</h2>
@@ -426,7 +402,7 @@
             </div>
           </div>
         </div>
-        <div id="subsection-branding" class="subsection item">
+        <div id="subsection-branding" class="subsection item" slide="1">
           <div class="subsection-child" class="subsection-child">
             <h2>BRANDING CREATIVE SERVICES</h2>
             <h1>A brand is much more than a logo</h1>
@@ -464,7 +440,31 @@
             </div>
           </div>
         </div>
-        <div id="subsection-design" class="subsection item">
+        <div id="subsection-music" class="subsection item" slide="2">
+          <div class="subsection-child" class="subsection-child">
+            <img class="music-girl" src="/images/music-girl.png" />
+            <h2>Music Creative Services</h2>
+            <h1>No one ever danced to a mission statement</h1>
+            <div class="white-line"></div>
+            <div class="content">Your logo. Your colors. Your advertising. Your tagline. These are all important to your brand. But let’s be honest. No one has ever hummed to a logo or danced to a mission statement. We bring together brand and ad experts with musicians and composers to create something more memorable and entirely new: brand music.</div>
+            <ul>
+              <li>Soundtracks for TV, radio and podcasts</li>
+              <li>Custom music for digital videos, trade shows and presentations</li>
+              <li>Sound design for websites, digital, mobile and social media</li>
+              <li>Mnemoics and distinctive audio signatures</li>
+              <li>Hold music for customer support centers</li>
+            </ul>
+            <div class="quote-blue">&quot;Research shows mussectionic dramatially boosts memory&quot;</div>
+            <h2>BUSINESS INSIDER</h2>
+            <img class="icon" src="images/icon-music.png" />
+            <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
+            <h2>ERIC SHEINKOP</h2>
+            <div class="btn">GO TO OUR MUSIC SITE</div>
+            <div class="callout">CLICK ON A CASSETTE TO LISTEN</div>
+            <img class="music-cassette" src="/images/music-cassettes.png" />
+          </div>
+        </div>
+        <div id="subsection-design" class="subsection item" slide="3">
           <div class="subsection-child" class="subsection-child">
             <img class="sizzle-reel" src="/images/video-2.jpg" />
             <h2>DESIGN CREATIVE SERVICES</h2>
@@ -498,7 +498,7 @@
             </div>
           </div>
         </div>
-        <div id="subsection-digital" class="subsection item">
+        <div id="subsection-digital" class="subsection item" slide="4">
           <div class="subsection-child" class="subsection-child">
             <img id="digital-image" src="/images/video-2.jpg" />
             <h2>DIGITAL CREATIVE SERVICES</h2>
@@ -533,7 +533,7 @@
             </div>
           </div>
         </div>
-        <div id="subsection-social" class="subsection item">
+        <div id="subsection-social" class="subsection item" slide="5">
           <div class="subsection-banner">
             <img id="social-image" src="/images/image-woman.jpg" />
           </div>
@@ -552,7 +552,7 @@
             <div class="quote-blue">81% of consumers say recommendations influence their buying decisions.</div>
           </div>
         </div>
-        <div id="subsection-content" class="subsection item">
+        <div id="subsection-content" class="subsection item" slide="6">
           <div class="subsection-banner">
             <img id="content-image" src="/images/image-woman.jpg" />
           </div>
@@ -570,7 +570,7 @@
             <div class="quote-blue">88% of executive buyers want a conversation, not a presentation</div>
           </div>
         </div>
-        <div id="subsection-broadcast" class="subsection item">
+        <div id="subsection-broadcast" class="subsection item" slide="7">
           <div class="subsection-child" class="subsection-child">
             <img id="broadcast-image" src="/images/video-2.jpg" />
             <h2>BROADCAST CREATIVE SERVICES</h2>
@@ -610,7 +610,7 @@
             </div>
           </div>
         </div>
-        <div id="subsection-workshop-detail" class="subsection item">
+        <div id="subsection-workshop-detail" class="subsection item" slide="8">
           <div class="subsection-child" class="subsection-child">
             <img id="workshop-image" src="/images/image-woman.jpg" />
             <h2>STORY WORKSHOP</h2>
