Fix a few more items related to the subsection styling

--- a/app/index.html
+++ b/app/index.html
@@ -657,17 +657,21 @@
           </div>
         </div>
       </div>
-      <div class="subsectionDock">
-        <div class="dockBG"></div>
-        <a data-href="#video" class="dockItem" slide="0"><img src="images/icon-video.png" alt="Video subsection" /></a>
-        <a data-href="#branding" class="dockItem" slide="1"><img src="images/icon-branding.png" alt="Branding subsection" /></a>
-        <a data-href="#music" class="dockItem" slide="2"><img src="images/icon-music.png" alt="Music subsection" /></a>
-        <a data-href="#design" class="dockItem" slide="3"><img src="images/icon-design.png" alt="Design subsection" /></a>
-        <a data-href="#digital" class="dockItem" slide="4"><img src="images/icon-digital.png" alt="Digital subsection" /></a>
-        <a data-href="#social" class="dockItem" slide="5"><img src="images/icon-social.png" alt="Social subsection" /></a>
-        <a data-href="#content" class="dockItem" slide="6"><img src="images/icon-content.png" alt="Content subsection" /></a>
-        <a data-href="#broadcast" class="dockItem" slide="7"><img src="images/icon-broadcast.png" alt="Broadcast subsection" /></a>
-        <a data-href="#workshop-detail" class="dockItem" slide="8"><img src="images/icon-design.png" alt="Design subsection" /></a>
+      <div class="subsection-dock">
+        <div style="position:relative; text-align: center; margin-top: 0.5rem;">
+          <div style="display:inline-block; margin: 0 auto;">
+            <div class="dockBG"></div>
+            <a data-href="#video" class="dock-item" slide="0"><img src="images/icon-video.png" alt="Video subsection" /></a>
+            <a data-href="#branding" class="dock-item" slide="1"><img src="images/icon-branding.png" alt="Branding subsection" /></a>
+            <a data-href="#music" class="dock-item" slide="2"><img src="images/icon-music.png" alt="Music subsection" /></a>
+            <a data-href="#design" class="dock-item" slide="3"><img src="images/icon-design.png" alt="Design subsection" /></a>
+            <a data-href="#digital" class="dock-item" slide="4"><img src="images/icon-digital.png" alt="Digital subsection" /></a>
+            <a data-href="#social" class="dock-item" slide="5"><img src="images/icon-social.png" alt="Social subsection" /></a>
+            <a data-href="#content" class="dock-item" slide="6"><img src="images/icon-content.png" alt="Content subsection" /></a>
+            <a data-href="#broadcast" class="dock-item" slide="7"><img src="images/icon-broadcast.png" alt="Broadcast subsection" /></a>
+            <a data-href="#workshop-detail" class="dock-item" slide="8"><img src="images/icon-design.png" alt="Design subsection" /></a>
+          </div>
+        </div>
       </div>
     </div>
     <div id="section-header">
