--- a/app/index.html
+++ b/app/index.html
@@ -343,6 +343,11 @@
       </div>
     </div>
     <div id="subsection-carousel">
+      <div id="subsection-close">
+        <a href="javascript:leaveSubSection()">
+          <i class="fa fa-close"></i></a>
+        </a>
+      </div>
       <div class="owl-carousel">
         <div id="subsection-video" class="subsection item" slide="0">
           <div class="subsection-child" class="subsection-child">
@@ -669,7 +674,6 @@
             <a data-href="#social" class="dock-item" slide="5"><img src="images/icon-social.png" alt="Social subsection" /></a>
             <a data-href="#content" class="dock-item" slide="6"><img src="images/icon-content.png" alt="Content subsection" /></a>
             <a data-href="#broadcast" class="dock-item" slide="7"><img src="images/icon-broadcast.png" alt="Broadcast subsection" /></a>
-            <a data-href="#workshop-detail" class="dock-item" slide="8"><img src="images/icon-design.png" alt="Design subsection" /></a>
           </div>
         </div>
       </div>
@@ -734,6 +738,8 @@
     <script src="/jungle-js/narrator/narrator.min.js"></script>
     <!-- build:js scripts/main.js -->
     <script src="scripts/autoplayDetect.js"></script>
+    <script src="scripts/hashChange.js"></script>
+    <script src="scripts/scrollBlock.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/parallax.js"></script>
     <!-- endbuild -->
