Various style updates to several sections, mostly subsections

--- a/app/index.html
+++ b/app/index.html
@@ -93,7 +93,10 @@
           <div id="section-story-type-flex" class="content-centered">
             <div class="section-story-type-header">
               <h1>Telling your story well</h1>
-              <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner. <span class="story-desktop-copy">The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</span><span class="story-mobile-copy">We work with a variety of mediums to make your story memorable and true.</span></div>
+              <div class="main">Even the best strategy for the greatest product or service quickly runs adrift without the right creative partner.
+                <span class="story-desktop-copy">The right creative partner is collaborative&#8212;and knows how to move audiences to act. Whether your story is best told as a video, logo, web banner, website, or brand music, we work with you to create something memorable and true.</span>
+                <span class="story-mobile-copy">We work with a variety of mediums to make your story memorable and true.</span>
+              </div>
             </div>
             <div class="story-types">
               <div class="story-type">
@@ -351,7 +354,7 @@
       <div class="owl-carousel">
         <div id="subsection-video" class="subsection item" slide="0">
           <div class="subsection-child" class="subsection-child">
-            <img class="sizzle-reel" src="/images/video-2.jpg" />
+            <img class="main-image" src="/images/video-2.jpg" />
             <h2>VIDEO CREATIVE SERVICES</h2>
             <h1>Video is no longer a novelty, but good video is</h1>
             <div class="white-line"></div>
@@ -447,7 +450,7 @@
         </div>
         <div id="subsection-music" class="subsection item" slide="2">
           <div class="subsection-child" class="subsection-child">
-            <img class="music-girl" src="/images/music-girl.png" />
+            <img class="main-image" src="/images/music-girl.png" />
             <h2>Music Creative Services</h2>
             <h1>No one ever danced to a mission statement</h1>
             <div class="white-line"></div>
@@ -471,7 +474,7 @@
         </div>
         <div id="subsection-design" class="subsection item" slide="3">
           <div class="subsection-child" class="subsection-child">
-            <img class="sizzle-reel" src="/images/video-2.jpg" />
+            <img class="main-image" src="/images/video-2.jpg" />
             <h2>DESIGN CREATIVE SERVICES</h2>
             <h1>Even a new logo should tell a story</h1>
             <div class="white-line"></div>
@@ -505,7 +508,7 @@
         </div>
         <div id="subsection-digital" class="subsection item" slide="4">
           <div class="subsection-child" class="subsection-child">
-            <img id="digital-image" src="/images/video-2.jpg" />
+            <img class="main-image" src="/images/video-2.jpg" />
             <h2>DIGITAL CREATIVE SERVICES</h2>
             <h1>Online audiences are hardened and have to be drawn in</h1>
             <div class="white-line"></div>
@@ -539,10 +542,8 @@
           </div>
         </div>
         <div id="subsection-social" class="subsection item" slide="5">
-          <div class="subsection-banner">
-            <img id="social-image" src="/images/image-woman.jpg" />
-          </div>
           <div class="subsection-child" class="subsection-child">
+            <img class="main-image" src="/images/image-woman.jpg" />
             <h2>SOCIAL MEDIA CREATIVE SERVICES</h2>
             <h1>Turning the focus from you to your audience</h1>
             <div class="white-line"></div>
@@ -558,10 +559,8 @@
           </div>
         </div>
         <div id="subsection-content" class="subsection item" slide="6">
-          <div class="subsection-banner">
-            <img id="content-image" src="/images/image-woman.jpg" />
-          </div>
           <div class="subsection-child" class="subsection-child">
+            <img class="main-image" src="/images/image-woman.jpg" />
             <h2>CONTENT CREATIVE SERVICES</h2>
             <h1>When people linger,<br> they're more likely to share</h1>
             <div class="white-line"></div>
