Adding missing images

--- a/app/index.html
+++ b/app/index.html
@@ -520,7 +520,7 @@
       </div>
       <div id="subsection-design" class="subsection item" slide="3">
         <div class="subsection-child" class="subsection-child">
-          <img class="main-image" src="/images/video-2.jpg" />
+          <img class="main-image" src="/images/image-design-header.jpg" />
           <h2>DESIGN CREATIVE SERVICES</h2>
           <h1>Even a new logo should tell a story</h1>
           <div class="white-line"></div>
@@ -554,7 +554,7 @@
       </div>
       <div id="subsection-digital" class="subsection item" slide="4">
         <div class="subsection-child" class="subsection-child">
-          <img class="main-image" src="/images/video-2.jpg" />
+          <img class="main-image" src="/images/image-mouse.jpg" />
           <h2>DIGITAL CREATIVE SERVICES</h2>
           <h1>Online audiences are hardened and have to be drawn in</h1>
           <div class="white-line"></div>
@@ -589,9 +589,9 @@
       </div>
       <div id="subsection-social" class="subsection item" slide="5">
         <div class="subsection-child" class="subsection-child">
-          <img class="main-image" src="/images/image-woman.jpg" />
+          <img class="main-image" src="/images/image-men-cellphones.jpg" />
           <h2>SOCIAL MEDIA CREATIVE SERVICES</h2>
-          <h1>Turning the focus from you to your audience</h1>
+          <h1>Turning your focus from you to your audience</h1>
           <div class="white-line"></div>
           <div class="content">The Internet, social media and mobile technology have empowered consumers to ignore marketing messages and seek information directly from people they trust. We develop social content that tells a story&#8212;shifting the focus away from pushing a message out to connecting with your audiences on a personal level.</div>
           <ul>
