--- a/app/index.html
+++ b/app/index.html
@@ -347,7 +347,7 @@
     </div>
     <div id="subsection-workshop-detail" class="subsection item">
       <div class="subsection-child" class="subsection-child">
-        <div id="subsection-close">
+        <div id="workshop-close">
           <a href="javascript:leaveSubSection()">
             <i class="fa fa-close"></i>
           </a>
