--- a/app/index.html
+++ b/app/index.html
@@ -220,7 +220,9 @@
             <div class="work-recent-stories">
               <div class="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
               <div class="work-stories-right">
-                <div class="work-story-2"><img src="images/video-2.jpg" alt="Demo video" /></div>
+                <div class="work-story-2">
+                  <iframe src="https://player.vimeo.com/video/125032169?title=0&byline=0&portrait=0" width="300" height="168" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
                 <div class="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
               </div>
             </div>
@@ -238,7 +240,9 @@
             <div class="work-recent-stories">
               <div class="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
               <div class="work-stories">
-                <div class="work-story-2"><img src="images/video-2.jpg" alt="Demo video" /></div>
+                <div class="work-story-2">
+                  <iframe src="https://player.vimeo.com/video/125032169?title=0&byline=0&portrait=0" width="300" height="168" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
                 <div class="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
               </div>
             </div>
@@ -277,7 +281,7 @@
               </div>
             </div>
             <div id="approach-reel-desktop">
-              <img src="images/video-1.jpg" alt="Demo video" />
+              <iframe src="https://player.vimeo.com/video/119407320?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
             <div id="approach-flex-mobile-wrapper">
               <div id="approach-quote">
@@ -289,7 +293,7 @@
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
               </div>
               <div id="approach-reel">
-                <img src="images/video-1.jpg" alt="Demo video" />
+                <iframe src="https://player.vimeo.com/video/119407320?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
               </div>
             </div>
           </div>
