Added image map to cassettes

--- a/app/index.html
+++ b/app/index.html
@@ -524,7 +524,13 @@
             <h2>ERIC SHEINKOP</h2>
             <div class="btn">GO TO OUR MUSIC SITE</div>
             <div class="callout">CLICK ON A CASSETTE TO LISTEN</div>
-            <img class="music-cassette" src="/images/music-cassettes.png" />
+            <img class="music-cassette" src="/images/music-cassettes.png" orgWidth="1075" orgHeight="950" usemap="#cassetteMap" alt="Image of four cassettes: Comcast, WOW business, Wyoming Medical Center, and ProBuild" />
+            <map name="cassetteMap" id="cassetteMap">
+              <area alt="" href="#" shape="poly" coords="85,239,983,229,1004,254,991,391,17,441,3,300,28,86,98,85,66,183,70,227"/>
+              <area alt="" href="#" shape="poly" coords="73,442,995,392,1001,322,1053,414,1037,539,82,563"/>
+              <area alt="" href="#" shape="poly" coords="151,660,720,667,765,668,786,660,903,659,920,590,910,549,1033,543,1070,622,1059,730,160,777"/>
+              <area alt="" href="#" shape="poly" coords="158,781,913,740,921,769,908,881,28,848,19,742,49,655,147,665"/>
+            </map>
           </div>
         </div>
         <div id="subsection-design" class="subsection item" slide="3">
@@ -739,6 +745,7 @@
   <script src="/bower_components/jquery-touchswipe/jquery.touchSwipe.js"></script>
   <!--<script src="/bower_components/requirejs/require.js"></script>-->
   <script src="/bower_components/ScrollMagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
+  <script src="/bower_components/image-map-resizer/js/imageMapResizer.min.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
