Fix adblock preventing icon from downloading

--- a/app/index.html
+++ b/app/index.html
@@ -133,7 +133,7 @@
               </div>
               <div class="story-type">
                 <a href="#social">
-                  <img src="images/icon-social.png" alt="Social icon" />
+                  <img src="images/icon-network.png" alt="Social icon" />
                   <span>Social</span>
                 </a>
               </div>
@@ -615,7 +615,7 @@
               <li>Community outreach and influencer engagement</li>
               <li>Social media strategy and playbooks</li>
             </ul>
-            <img class="icon" src="images/icon-social.png" />
+            <img class="icon" src="images/icon-network.png" />
             <div class="quote-blue">81% of consumers say recommendations influence their buying decisions.</div>
           </div>
         </div>
@@ -685,7 +685,7 @@
             <a data-href="#music" class="dock-item" slide="2"><img src="images/icon-music.png" alt="Music subsection" /></a>
             <a data-href="#design" class="dock-item" slide="3"><img src="images/icon-design.png" alt="Design subsection" /></a>
             <a data-href="#digital" class="dock-item" slide="4"><img src="images/icon-digital.png" alt="Digital subsection" /></a>
-            <a data-href="#social" class="dock-item" slide="5"><img src="images/icon-social.png" alt="Social subsection" /></a>
+            <a data-href="#social" class="dock-item" slide="5"><img src="images/icon-network.png" alt="Social subsection" /></a>
             <a data-href="#content" class="dock-item" slide="6"><img src="images/icon-content.png" alt="Content subsection" /></a>
             <a data-href="#broadcast" class="dock-item" slide="7"><img src="images/icon-broadcast.png" alt="Broadcast subsection" /></a>
           </div>
