Fix typo in music subsection

--- a/app/index.html
+++ b/app/index.html
@@ -517,7 +517,7 @@
               <li>Mnemoics and distinctive audio signatures</li>
               <li>Hold music for customer support centers</li>
             </ul>
-            <div class="quote-blue">&quot;Research shows mussectionic dramatially boosts memory&quot;</div>
+            <div class="quote-blue">&quot;Research shows music dramatially boosts memory&quot;</div>
             <h2>BUSINESS INSIDER</h2>
             <img class="icon" src="images/icon-music.png" />
             <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
