Add desktop menu

--- a/app/index.html
+++ b/app/index.html
@@ -698,6 +698,17 @@
     <a href="#campfire">
       <img class="narrator-logo-small" src="images/logo-n.png" alt="Narrator group logo" />
     </a>
+    <div id="desktop-menu">
+      <ul>
+        <li id="nav-section-campfire"><a href="#campfire">CAMPFIRE</a></li>
+        <li id="nav-section-about"><a href="#about">ABOUT</a></li>
+        <li id="nav-section-approach"><a href="#approach">APPROACH</a></li>
+        <li id="nav-section-work"><a href="#work">WORK</a></li>
+        <li id="nav-section-workshop"><a href="#workshop">WORKSHOP</a></li>
+        <li id="nav-section-story-type"><a href="#story">STORY</a></li>
+        <li id="nav-section-contact"><a href="#contact">CONTACT</a></li>
+      </ul>
+    </div>
     <div id="mobile-menu">
       <button type="button" class="open-menu" id="btn-open-menu">
       <div class="icon-bar"></div>
