--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- Place favicon.ico in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/magnific-popup/dist/magnific-popup.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -281,7 +282,10 @@
               </div>
             </div>
             <div id="approach-reel-desktop">
-              <iframe src="https://player.vimeo.com/video/119407320?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <a class="vimeo" href="https://vimeo.com/119407320">
+                  <img src="https://i.vimeocdn.com/video/506617727_500.jpg">
+                  <i class="fa fa-play"></i>
+                </a>
             </div>
             <div id="approach-flex-mobile-wrapper">
               <div id="approach-quote">
@@ -293,8 +297,11 @@
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
               </div>
               <div id="approach-reel">
-                <iframe src="https://player.vimeo.com/video/119407320?title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-              </div>
+                <a class="vimeo" href="https://vimeo.com/119407320">
+                  <img src="https://i.vimeocdn.com/video/506617727_500.jpg">
+                  <i class="fa fa-play"></i>
+                </a>
+               </div>
             </div>
           </div>
         </div>
@@ -753,10 +760,11 @@
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
   <script src="/bower_components/jquery/dist/jquery.js"></script>
-  <script src="/bower_components/jquery-touchswipe/jquery.touchSwipe.js"></script>
-  <!--<script src="/bower_components/requirejs/require.js"></script>-->
-  <script src="/bower_components/ScrollMagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
   <script src="/bower_components/image-map-resizer/js/imageMapResizer.min.js"></script>
+  <script src="/bower_components/jquery-touchswipe/jquery.touchSwipe.js"></script>
+  <script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
+  <script src="/bower_components/requirejs/require.js"></script>
+  <script src="/bower_components/ScrollMagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js"></script>
