Update Approach and Work sections with vimeo links

--- a/app/index.html
+++ b/app/index.html
@@ -219,12 +219,25 @@
               </div>
             </div>
             <div class="work-recent-stories">
-              <div class="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
+              <div class="work-story-1">
+                <a class="vimeo" href="https://vimeo.com/119407320">
+                  <img src="https://i.vimeocdn.com/video/506617727_700.jpg">
+                  <i class="fa fa-play"></i>
+                </a>
+              </div>
               <div class="work-stories-right">
                 <div class="work-story-2">
-                  <iframe src="https://player.vimeo.com/video/125032169?title=0&byline=0&portrait=0" width="300" height="168" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  <a class="vimeo" href="https://vimeo.com/125032169">
+                    <img src="https://i.vimeocdn.com/video/514980407_500.jpg">
+                    <i class="fa fa-play"></i>
+                  </a>
                 </div>
-                <div class="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
+                <div class="work-story-3">
+                  <a class="vimeo" href="https://vimeo.com/125030496">
+                    <img src="https://i.vimeocdn.com/video/514979295_500.jpg">
+                    <i class="fa fa-play"></i>
+                  </a>
+                </div>
               </div>
             </div>
             <div class="work-btn-wrapper">
@@ -239,12 +252,25 @@
               </div>
             </div>
             <div class="work-recent-stories">
-              <div class="work-story-1"><img src="images/video-1.jpg" alt="Demo video" /></div>
+              <div class="work-story-1">
+                <a class="vimeo" href="https://vimeo.com/119407320">
+                  <img src="https://i.vimeocdn.com/video/506617727_700.jpg">
+                  <i class="fa fa-play"></i>
+                </a>
+              </div>
               <div class="work-stories">
                 <div class="work-story-2">
-                  <iframe src="https://player.vimeo.com/video/125032169?title=0&byline=0&portrait=0" width="300" height="168" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                  <a class="vimeo" href="https://vimeo.com/125032169">
+                    <img src="https://i.vimeocdn.com/video/514980407_500.jpg">
+                    <i class="fa fa-play"></i>
+                  </a>
                 </div>
-                <div class="work-story-3"><img src="images/video-3.jpg" alt="Demo video" /></div>
+                <div class="work-story-3">
+                  <a class="vimeo" href="https://vimeo.com/125030496">
+                    <img src="https://i.vimeocdn.com/video/514979295_500.jpg">
+                    <i class="fa fa-play"></i>
+                  </a>
+                </div>
               </div>
             </div>
             <div class="work-btn-wrapper">
@@ -282,10 +308,10 @@
               </div>
             </div>
             <div id="approach-reel-desktop">
-                <a class="vimeo" href="https://vimeo.com/119407320">
-                  <img src="https://i.vimeocdn.com/video/506617727_500.jpg">
-                  <i class="fa fa-play"></i>
-                </a>
+              <a class="vimeo" href="https://vimeo.com/133690067">
+                <img src="https://i.vimeocdn.com/video/526988863_500.jpg">
+                <i class="fa fa-play"></i>
+              </a>
             </div>
             <div id="approach-flex-mobile-wrapper">
               <div id="approach-quote">
@@ -297,11 +323,11 @@
                 <div class="relative quote-line">&nbsp;<div class="white-line"></div></div>
               </div>
               <div id="approach-reel">
-                <a class="vimeo" href="https://vimeo.com/119407320">
-                  <img src="https://i.vimeocdn.com/video/506617727_500.jpg">
+                <a class="vimeo" href="https://vimeo.com/133690067">
+                  <img src="https://i.vimeocdn.com/video/526988863_500.jpg">
                   <i class="fa fa-play"></i>
                 </a>
-               </div>
+              </div>
             </div>
           </div>
         </div>
