Update copy text in Story Workshop subsection

--- a/app/index.html
+++ b/app/index.html
@@ -405,13 +405,13 @@
               <li>Identify and define your brand personality and character</li>
               <li>Reveal the challenges and obstacles to be resolved</li>
               <li>Find the point of emotional leverage</li>
-              <li>Create a Storytelling Plot&copy; to define what your brand story is all about</li>
-              <li>Develop a Storytelling Message Map&copy; to guide how the story unfolds</li>
+              <li>Create a Story Plot to define what your brand story is all about</li>
+              <li>Develop a Story Message Map to guide how the story unfolds</li>
             </ul>
           </li>
           <li>A framework bringing all marketing efforts around the core story
             <ul>
-              <li>Draft and final versions of the brand Storytelling Plot&copy; and Storytelling Message Map&copy;</li>
+              <li>Draft and final versions of the brand Story Plot and Story Message Map</li>
             </ul>
           </li>
         </ol>
