Update Video subsection with vimeo links

--- a/app/index.html
+++ b/app/index.html
@@ -459,40 +459,47 @@
             <div id="video-callout" class="callout">CLICK TO WATCH THE VIDEOS</div>
             <div class="video-examples-row examples-row">
               <div class="video-example example">
-                <a href="#">
-                  <img src="images/video-1.jpg" alt="Video" />
+                <a class="vimeo" href="https://vimeo.com/80719133">
+                  <img src="https://i.vimeocdn.com/video/456705518_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="video-example example">
-                <a href="#">
-                  <img src="images/video-1.jpg" alt="Branding" />
+                <a class="vimeo" href="https://vimeo.com/125044047">
+                  <img src="https://i.vimeocdn.com/video/515002008_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="video-example example">
-                <a href="#">
-                  <img src="images/video-1.jpg" alt="Music" />
+                <a class="vimeo" href="https://vimeo.com/76909404">
+                  <img src="https://i.vimeocdn.com/video/451904463_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="video-example example">
-                <a href="#">
-                  <img src="images/video-1.jpg" alt="Design" />
+                <a class="vimeo" href="https://vimeo.com/46266993">
+                  <img src="https://i.vimeocdn.com/video/322110430_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
             </div>
             <div class="video-examples-row examples-row">
               <div class="video-example example">
-                <a href="#">
-                  <img src="images/video-1.jpg" alt="Digital" />
+                <a class="vimeo" href="https://vimeo.com/136942433">
+                  <img src="https://i.vimeocdn.com/video/531649012_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="video-example example">
-                <a href="#">
-                  <img src="images/video-1.jpg" alt="Social" />
+                <a class="vimeo" href="https://vimeo.com/76906147">
+                  <img src="https://i.vimeocdn.com/video/451898284_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="video-example example">
-                <a href="#">
-                  <img src="images/video-1.jpg" alt="Content" />
+                <a class="vimeo" href="https://vimeo.com/125030495">
+                  <img src="https://i.vimeocdn.com/video/514979472_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
             </div>
