Update cassette links and Broadcast examples

--- a/app/index.html
+++ b/app/index.html
@@ -566,10 +566,10 @@
             <div class="callout">CLICK ON A CASSETTE TO LISTEN</div>
             <img class="music-cassette" src="/images/music-cassettes.png" orgWidth="1075" orgHeight="950" usemap="#cassetteMap" alt="Image of four cassettes: Comcast, WOW business, Wyoming Medical Center, and ProBuild" />
             <map name="cassetteMap" id="cassetteMap">
-              <area alt="" href="#" shape="poly" coords="85,239,983,229,1004,254,991,391,17,441,3,300,28,86,98,85,66,183,70,227"/>
-              <area alt="" href="#" shape="poly" coords="73,442,995,392,1001,322,1053,414,1037,539,82,563"/>
-              <area alt="" href="#" shape="poly" coords="151,660,720,667,765,668,786,660,903,659,920,590,910,549,1033,543,1070,622,1059,730,160,777"/>
-              <area alt="" href="#" shape="poly" coords="158,781,913,740,921,769,908,881,28,848,19,742,49,655,147,665"/>
+              <area alt="" href="http://www.brandedmusic.com/" shape="poly" coords="85,239,983,229,1004,254,991,391,17,441,3,300,28,86,98,85,66,183,70,227"/>
+              <area alt="" href="http://www.brandedmusic.com/" shape="poly" coords="73,442,995,392,1001,322,1053,414,1037,539,82,563"/>
+              <area alt="" href="http://www.brandedmusic.com/" shape="poly" coords="151,660,720,667,765,668,786,660,903,659,920,590,910,549,1033,543,1070,622,1059,730,160,777"/>
+              <area alt="" href="http://www.brandedmusic.com/" shape="poly" coords="158,781,913,740,921,769,908,881,28,848,19,742,49,655,147,665"/>
             </map>
           </div>
         </div>
@@ -693,23 +693,27 @@
             <div id="broadcast-callout" class="callout">SEE OUR BROADCAST WORK</div>
             <div class="broadcast-examples-row examples-row">
               <div class="broadcast-example example">
-                <a href="#">
-                  <img src="images/video-3.jpg" alt="broadcast 1" />
+                <a class="vimeo" href="https://vimeo.com/106178314">
+                  <img src="https://i.vimeocdn.com/video/530233865_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="broadcast-example example">
-                <a href="#">
-                  <img src="images/video-3.jpg" alt="broadcast 2" />
+                <a class="vimeo" href="https://vimeo.com/107535566">
+                  <img src="https://i.vimeocdn.com/video/490964454_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="broadcast-example example">
-                <a href="#">
-                  <img src="images/video-3.jpg" alt="broadcast 3" />
+                <a class="vimeo" href="https://vimeo.com/125032514">
+                  <img src="https://i.vimeocdn.com/video/514992554_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
               <div class="broadcast-example example">
-                <a href="#">
-                  <img src="images/video-3.jpg" alt="broadcast 4" />
+                <a class="vimeo" href="https://vimeo.com/131004175">
+                  <img src="https://i.vimeocdn.com/video/523079572_300.jpg">
+                  <i class="fa fa-play"></i>
                 </a>
               </div>
             </div>
