Added link to Music subsection

--- a/app/index.html
+++ b/app/index.html
@@ -562,7 +562,7 @@
             <img class="icon" src="images/icon-music.png" />
             <div class="quote-blue">&quot;Without music, a brilliant campaign can go unnoticed. With music, a subpar creative production can go viral&quot;</div>
             <h2>ERIC SHEINKOP</h2>
-            <div class="btn">GO TO OUR MUSIC SITE</div>
+            <a class="btn" href="http://www.brandedmusic.com/">GO TO OUR MUSIC SITE</a>
             <div class="callout">CLICK ON A CASSETTE TO LISTEN</div>
             <img class="music-cassette" src="/images/music-cassettes.png" orgWidth="1075" orgHeight="950" usemap="#cassetteMap" alt="Image of four cassettes: Comcast, WOW business, Wyoming Medical Center, and ProBuild" />
             <map name="cassetteMap" id="cassetteMap">
