Fix subsection transition

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
           </div>
         </div>
       </div>
-      <div id="story" class="touchswipe"></div>
+      <div id="story-type" class="touchswipe"></div>
       <div id="section-story-type" class="section">
         <div id="section-story-type-child" class="section-child">
           <div id="section-story-type-flex" class="content-centered">
@@ -744,12 +744,12 @@
     </a>
     <div id="desktop-menu">
       <ul>
-        <li id="nav-section-campfire"><a href="#campfire">CAMPFIRE</a></li>
-        <li id="nav-section-about"><a href="#about">ABOUT</a></li>
-        <li id="nav-section-approach"><a href="#approach">APPROACH</a></li>
-        <li id="nav-section-work"><a href="#work">WORK</a></li>
+        <li id="nav-section-campfire"><a href="#campfire">HOME</a></li>
+        <li id="nav-section-about"><a href="#about">ABOUT US</a></li>
+        <li id="nav-section-approach"><a href="#approach">OUR APPROACH</a></li>
+        <li id="nav-section-work"><a href="#work">OUR WORK</a></li>
         <li id="nav-section-workshop"><a href="#workshop">WORKSHOP</a></li>
-        <li id="nav-section-story-type"><a href="#story">STORY</a></li>
+        <li id="nav-section-story-type"><a href="#story-type">STORYTELLING</a></li>
         <li id="nav-section-contact"><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -764,14 +764,14 @@
           <button class="btn-close" id="btn-close-menu"><i class="fa fa-close"></i></button>
           <div class="mobile-nav">
             <ul class="section-1">
-              <li><a href="#campfire">CAMPFIRE</a></li>
-              <li><a href="#about">ABOUT</a></li>
-              <li><a href="#approach">APPROACH</a></li>
-              <li><a href="#work">WORK</a></li>
+              <li><a href="#campfire">HOME</a></li>
+              <li><a href="#about">ABOUT US</a></li>
+              <li><a href="#approach">OUR APPROACH</a></li>
+              <li><a href="#work">OUR WORK</a></li>
             </ul>
             <ul class="section-2">
               <li><a href="#workshop">WORKSHOP</a></li>
-              <li><a href="#story">STORY</a></li>
+              <li><a href="#story-type">STORYTELLING</a></li>
               <li><a href="#contact">CONTACT</a></li>
             </ul>
           </div>
@@ -800,7 +800,6 @@
   <script src="/bower_components/image-map-resizer/js/imageMapResizer.min.js"></script>
   <script src="/bower_components/jquery-touchswipe/jquery.touchSwipe.js"></script>
   <script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
-  <script src="/bower_components/requirejs/require.js"></script>
   <script src="/bower_components/ScrollMagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
